[#2215] Make secrets array mandatory
The supported credentials types now require the secrets array to be
non-empty.

Conflicts:
	services/device-registry-base/src/test/java/org/eclipse/hono/service/credentials/Credentials.java
	site/documentation/content/api/management/device-registry-v1.yaml
	tests/src/test/java/org/eclipse/hono/tests/registry/CredentialsManagementIT.java

Signed-off-by: Kai Hudalla <kai.hudalla@bosch.io>